metadata/force-app/main/default/objects/Opportunity/fields/DAM_Standalone__c.field-meta.xml
<CustomField>
    <fullName>DAM_Standalone__c</fullName>
    <description>Used to specify if the opportunity has DAM or Standalone Gather Content products.</description>
    <label>DAM/Standalone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAM</fullName>
                <default>true</default>
                <label>DAM</label>
            </value>
            <value>
                <fullName>Standalone Content Workflow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>