metadata/force-app/main/default/objects/Opportunity/fields/Date_RFP_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_RFP_Received__c</fullName>
    <description>When an RFP was received</description>
    <label>Date RFP Received</label>
    <type>Date</type>
</CustomField>