metadata/force-app/main/default/objects/Opportunity/fields/Date_RFP_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_RFP_Submitted__c</fullName>
    <description>Date the received RFP was submitted</description>
    <label>Date RFP Submitted</label>
    <type>Date</type>
</CustomField>