metadata/force-app/main/default/objects/Opportunity/fields/day_today__c.field-meta.xml
<CustomField>
    <fullName>day_today__c</fullName>
    <description>Used in Outout File Name for conga composer</description>
    <formula>if(Day (TODAY())&lt;10, text(0) &amp; text(Day(TODAY())), text(Day(TODAY())))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>day today</label>
    <type>Text</type>
</CustomField>