metadata/force-app/main/default/objects/Opportunity/fields/days_since_closed__c.field-meta.xml
<CustomField>
    <fullName>days_since_closed__c</fullName>
    <description>Number of days since the Opportunity is closed.</description>
    <formula>IF(
OR(ISPICKVAL(StageName, &quot;Closed Won&quot;), 
ISPICKVAL(StageName, &quot;Closed Lost&quot;)), 
TODAY() - CloseDate, 0
)</formula>
    <inlineHelpText>Number of days since the Opportunity is closed.</inlineHelpText>
    <label># days since closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>