metadata/force-app/main/default/objects/Opportunity/fields/Deal_Process__c.field-meta.xml
<CustomField>
    <fullName>Deal_Process__c</fullName>
    <inlineHelpText>What needs to happen to get the deal done?</inlineHelpText>
    <label>Deal Process</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>