metadata/force-app/main/default/objects/Opportunity/fields/Default_MRR_Price_from_Products__c.field-meta.xml
<CustomField>
    <fullName>Default_MRR_Price_from_Products__c</fullName>
    <label>Default MRR Price from Products</label>
    <summarizedField>OpportunityLineItem.Total_Default_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Term__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>