metadata/force-app/main/default/objects/Opportunity/fields/Default_Price_ARR__c.field-meta.xml
<CustomField>
    <fullName>Default_Price_ARR__c</fullName>
    <description>Returns Default Price of all MRR (recurring) products in ARR.</description>
    <formula>Default_MRR_Price_from_Products__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Price - ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>