metadata/force-app/main/default/objects/Opportunity/fields/Demo_Completed_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Demo_Completed_Outbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Completed - Outbound</label>
    <type>Checkbox</type>
</CustomField>