metadata/force-app/main/default/objects/Opportunity/fields/Demo_Completed_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Demo_Completed_Timestamp__c</fullName>
    <label>Demo Completed Timestamp</label>
    <type>DateTime</type>
</CustomField>