metadata/force-app/main/default/objects/Opportunity/fields/Did_Current_conditions_impact_decision__c.field-meta.xml
<CustomField>
    <fullName>Did_Current_conditions_impact_decision__c</fullName>
    <description>Used to capture if the churn decision is impacted by the current economic conditions or not.</description>
    <inlineHelpText>Specify &apos;Yes&apos; if current economic conditions impact the decision.</inlineHelpText>
    <label>Did Current conditions impact decision?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>