metadata/force-app/main/default/objects/Opportunity/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <description>For renewal mapped = TRUE</description>
    <label>Discount Amount - MRR (OLD, DONT USE)</label>
    <summarizedField>OpportunityLineItem.Discount_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.For_Renewal_Mapped__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>