metadata/force-app/main/default/objects/Opportunity/fields/Discount_Amount_ARR__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_ARR__c</fullName>
    <description>Returns the discount amount from this opportunity.</description>
    <formula>IF(ARR_manual__c &lt;  Default_Price_ARR__c,  Default_Price_ARR__c - ARR_manual__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount - ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>