metadata/force-app/main/default/objects/Opportunity/fields/DoA_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>DoA_Approval_Status__c</fullName>
    <description>BODEV-76: Stores DoA Approval Status</description>
    <label>DoA Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DoA_Approval_Status</valueSetName>
    </valueSet>
</CustomField>