metadata/force-app/main/default/objects/Opportunity/fields/DoA_ARR_Discount__c.field-meta.xml
<CustomField>
    <fullName>DoA_ARR_Discount__c</fullName>
    <description>BODEV-76: Formula to show the calculated MRR discount % on the Latest DoA record.</description>
    <formula>/*
  BODEV-673 Updated to show Contraction % in case of Renewal/Upsell with Contraction
*/


IF(
  ISBLANK( Latest_DoA__c ),
  NULL,
  IF(
    ISBLANK(Latest_DoA__r.Contraction_ARR__c),
    Latest_DoA__r.ARR_Discount__c,
    Latest_DoA__r.Contraction_Percent__c
  )
)</formula>
    <label>DoA ARR Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>