metadata/force-app/main/default/objects/Opportunity/fields/DoA_One_off_Discount__c.field-meta.xml
<CustomField>
    <fullName>DoA_One_off_Discount__c</fullName>
    <description>BODEV-76: Formula to show the calculated One-off discount % on the Latest DoA record.</description>
    <formula>IF( ISBLANK( Latest_DoA__c ), NULL, Latest_DoA__r.One_off_Discount__c )</formula>
    <label>DoA One-off Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>