metadata/force-app/main/default/objects/Opportunity/fields/DoA_Requester_Comments__c.field-meta.xml
<CustomField>
    <fullName>DoA_Requester_Comments__c</fullName>
    <description>BODEV-929: Enable requesters to add comments on DoA approval submission.
Filled by the DoA Flow.</description>
    <label>DoA Requester Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>