metadata/force-app/main/default/objects/Opportunity/fields/DocuSign_Envelope_Completed__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DocuSign Envelope Completed</label>
    <type>Checkbox</type>
</CustomField>