metadata/force-app/main/default/objects/Opportunity/fields/Due_Date_of_Customisations__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_of_Customisations__c</fullName>
    <description>To show what date the agreed-upon customisations are due</description>
    <inlineHelpText>What date has been signed off for the delivery of customisations?</inlineHelpText>
    <label>Due Date of Customisations</label>
    <type>Date</type>
</CustomField>