metadata/force-app/main/default/objects/Opportunity/fields/Email_Alert_50k_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Alert_50k_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for the process that sends an email alert if a deal with ARR more than 50k created.</description>
    <label>Email Alert &gt;50k Sent</label>
    <type>Checkbox</type>
</CustomField>