metadata/force-app/main/default/objects/Opportunity/fields/End_date_contract__c.field-meta.xml
<CustomField>
    <fullName>End_date_contract__c</fullName>
    <inlineHelpText>Only to be filled out AFTER the contract has been signed.</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>