metadata/force-app/main/default/objects/Opportunity/fields/Enterprise_Pricing_Shown_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Pricing_Shown_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BO-2151 New field: &quot;Enterprise Pricing Shown to Customer&quot; This is where AEs flag when they have presented enterprise pricing to a customer.</description>
    <label>Enterprise Pricing Shown to Customer</label>
    <type>Checkbox</type>
</CustomField>