metadata/force-app/main/default/objects/Opportunity/fields/Expansion_ARR__c.field-meta.xml
<CustomField>
    <fullName>Expansion_ARR__c</fullName>
    <formula>Expansion__c * 12</formula>
    <label>Expansion ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>