metadata/force-app/main/default/objects/Opportunity/fields/Finance_Fields_Change_After_Approval__c.field-meta.xml
<CustomField>
    <fullName>Finance_Fields_Change_After_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates that some finance fields have been changed after the approval of the opportunity.</description>
    <label>Reporting Fields Changed After Approval</label>
    <type>Checkbox</type>
</CustomField>