metadata/force-app/main/default/objects/Opportunity/fields/Flow_Chatter_Message_Platform_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Flow_Chatter_Message_Platform_Transfer__c</fullName>
    <description>Used in the scheduled flow to send a chatter message to CSM to update Portal ID and database.</description>
    <formula>AND(
Startdate_contract__c = TODAY() + 1,
New_MRR_Platform_transfer__c &gt;= 0
)</formula>
    <label>Flow: Chatter Message Platform Transfer</label>
    <type>Checkbox</type>
</CustomField>