metadata/force-app/main/default/objects/Opportunity/fields/Flow_If_close_date_in_the_past__c.field-meta.xml
<CustomField>
    <fullName>Flow_If_close_date_in_the_past__c</fullName>
    <formula>IF(TODAY()-1 = CloseDate ,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow: If close date in the past</label>
    <type>Checkbox</type>
</CustomField>