metadata/force-app/main/default/objects/Opportunity/fields/Forecast_Level__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Level__c</fullName>
    <description>What is the current forecast status of the deal, based on the close date what is the level of confidence in this deal closing?</description>
    <inlineHelpText>Based on the close date what is the level of confidence in this deal closing?</inlineHelpText>
    <label>Forecast Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minimum Commit</fullName>
            </value>
            <value>
                <fullName>Expected</fullName>
            </value>
            <value>
                <fullName>At risk</fullName>
            </value>
            <value>
                <fullName>At risk - conservative</fullName>
            </value>
            <value>
                <fullName>Upside</fullName>
            </value>
            <value>
                <fullName>Omit</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>