metadata/force-app/main/default/objects/Opportunity/fields/GB_storage__c.field-meta.xml
<CustomField>
    <fullName>GB_storage__c</fullName>
    <label>GB storage</label>
    <summarizedField>OpportunityLineItem.of_Storage_Mapped__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>