metadata/force-app/main/default/objects/Opportunity/fields/Has_Brand_Guidelines_Advanced_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Has_Brand_Guidelines_Advanced_Aggregate__c</fullName>
    <label>Has Brand Guidelines Advanced Aggregate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>