metadata/force-app/main/default/objects/Opportunity/fields/Has_Brand_Template_Agg__c.field-meta.xml
<CustomField>
    <fullName>Has_Brand_Template_Agg__c</fullName>
    <label>Has Brand Template Aggregate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>