metadata/force-app/main/default/objects/Opportunity/fields/Has_Creative_Workflow_Agg__c.field-meta.xml
<CustomField>
    <fullName>Has_Creative_Workflow_Agg__c</fullName>
    <description>BODEV-3183: Renamed Creative Workflow to &apos;Asset Workflow&apos;</description>
    <label>Has Asset Workflow Aggregate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>