metadata/force-app/main/default/objects/Opportunity/fields/Has_DAM_Agg__c.field-meta.xml
<CustomField>
    <fullName>Has_DAM_Agg__c</fullName>
    <label>Has DAM Aggregrate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>