metadata/force-app/main/default/objects/Opportunity/fields/Has_Digital_Brand_Templates_Agg__c.field-meta.xml
<CustomField>
    <fullName>Has_Digital_Brand_Templates_Agg__c</fullName>
    <label>Has Digital Brand Templates Aggregate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>