metadata/force-app/main/default/objects/Opportunity/fields/Has_Dynamic_Asset_Transformation_Agg__c.field-meta.xml
<CustomField>
    <fullName>Has_Dynamic_Asset_Transformation_Agg__c</fullName>
    <label>Has Dynamic Asset Transformation Agg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>