metadata/force-app/main/default/objects/Opportunity/fields/Has_Dynamic_Templates_Agg__c.field-meta.xml
<CustomField>
    <fullName>Has_Dynamic_Templates_Agg__c</fullName>
    <label>Has Dynamic Templates Aggregate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>