metadata/force-app/main/default/objects/Opportunity/fields/Has_GatherContent_Agg__c.field-meta.xml
<CustomField>
    <fullName>Has_GatherContent_Agg__c</fullName>
    <label>Has GC &amp; Content Workflow Aggregate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>