metadata/force-app/main/default/objects/Opportunity/fields/Has_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Has_Guidelines__c</fullName>
    <description>Temporary roll-up for Mandy. Checking what accounts don&apos;t have guidelines</description>
    <inlineHelpText>Temporary roll-up for Mandy. Checking what accounts don&apos;t have guidelines</inlineHelpText>
    <label>Has Old Guidelines</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Name_rus__c</field>
        <operation>contains</operation>
        <value>Guidelines</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Name_rus__c</field>
        <operation>notContain</operation>
        <value>Advanced</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Name_rus__c</field>
        <operation>notContain</operation>
        <value>Basic</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.For_Renewal_Mapped__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Name_rus__c</field>
        <operation>notContain</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>