metadata/force-app/main/default/objects/Opportunity/fields/Has_New_Brand_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Has_New_Brand_Guidelines__c</fullName>
    <description>Field that indicates how many Advanced and/or Basic Brand Guidelines the opportunity has. Used in the calculations on the Account level.</description>
    <label>Has New Brand Guidelines</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Name_rus__c</field>
        <operation>contains</operation>
        <value>Brand Guidelines (BG)</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Name_rus__c</field>
        <operation>notEqual</operation>
        <value>Brand Guidelines (BG)</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.For_Renewal_Mapped__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>