metadata/force-app/main/default/objects/Opportunity/fields/Has_Salesforce_Marketing_Cloud_Agg__c.field-meta.xml
<CustomField>
    <fullName>Has_Salesforce_Marketing_Cloud_Agg__c</fullName>
    <label>Has Salesforce Marketing Cloud Agg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>