metadata/force-app/main/default/objects/Opportunity/fields/Has_Solution_Core_Modules_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Has_Solution_Core_Modules_Aggregate__c</fullName>
    <description>This field is created for collect push reason on Upsell &amp; Renewals to better understand why deals with Solution &amp; Core Modules are slipping.</description>
    <label>Has Solution Core Modules Aggregate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>