metadata/force-app/main/default/objects/Opportunity/fields/Has_Video_Brand_Studio__c.field-meta.xml
<CustomField>
    <fullName>Has_Video_Brand_Studio__c</fullName>
    <description>Counts how many Video Brand Studio products this customer has on its opportunities.</description>
    <label>Has Video Brand Studio Basic Aggregate</label>
    <summarizedField>OpportunityLineItem.quantity_rounded__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Name_rus__c</field>
        <operation>equals</operation>
        <value>Video Brand Studio basic</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>