metadata/force-app/main/default/objects/Opportunity/fields/Has_Workstream_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Has_Workstream_Aggregate__c</fullName>
    <label>Has Workstream Aggregate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>