metadata/force-app/main/default/objects/Opportunity/fields/Implementation_status__c.field-meta.xml
<CustomField>
    <fullName>Implementation_status__c</fullName>
    <inlineHelpText>Is automatically set once &quot;% project completion&quot; is filled out.</inlineHelpText>
    <label>Implementation status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
                <default>true</default>
                <label>Not started</label>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>