metadata/force-app/main/default/objects/Opportunity/fields/Indexation_ARR_when_renewal_is_closed__c.field-meta.xml
<CustomField>
    <fullName>Indexation_ARR_when_renewal_is_closed__c</fullName>
    <description>Used to capture the indexation ARR to be reported on closing the renewal opportunity</description>
    <label>Indexation ARR when renewal is closed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>